--- a/myWorks/assets/style.css
+++ b/myWorks/assets/style.css
@@ -1,4 +1,4 @@
-.rectangle{
+/*.rectangle{
     height: 75px;
     width: 75px;
     color:white;
@@ -63,4 +63,47 @@ div {
         transform: translate(400%, 0%) rotate(360deg);
         transform-origin: left bottom;
     }
+}*/
+
+#chevron {
+    width: 350px;
+    height: 100px;
+    background: #05050e;
+    border-radius: 10px 10px 0 0;
+    position: relative;
+}
+#chevron:before {
+    content: '';
+    position: absolute;
+    top: 20px;
+    left: 0;
+    height: 100%;
+    width: 51%;
+    background: #e80a0a;
+    -webkit-transform: skew(0deg, 6deg);
+    -moz-transform: skew(0deg, 6deg);
+    -ms-transform: skew(0deg, 6deg);
+    -o-transform: skew(0deg, 6deg);
+    transform: skew(0deg, 6deg);
+}
+#chevron:after {
+    content: '';
+    position: absolute;
+    top: 20px;
+    right: 0;
+    height: 100%;
+    width: 50%;
+    background: #ef8afd;
+    -webkit-transform: skew(0deg, -6deg);
+    -moz-transform: skew(0deg, -6deg);
+    -ms-transform: skew(0deg, -6deg);
+    -o-transform: skew(0deg, -6deg);
+    transform: skew(0deg, -6deg);
+}
+
+.bShape {
+    fill: #FFF;
+    filter: drop-shadow(0px 4px 30px rgba(0, 0, 0, 0.41));
+    text-align: center;
+    padding: 3612px 42px 2672px 927px;
 }
