--- a/CSS/assets/Css/Style.css
+++ b/CSS/assets/Css/Style.css
@@ -1,5 +1,6 @@
 a{
     background-color: #0dcaf0;
+    /*declared values*/
     font-size: 50px;
     font-family: KDOLU;
 }
@@ -7,3 +8,5 @@ a{
 a:hover{
     background-color: red;
 }
+
+/*meshement units*/
