--- a/CSS/Casses/assets/Css/style.css
+++ b/CSS/Casses/assets/Css/style.css
@@ -29,17 +29,54 @@ body section>section:nth-child(4){
     bottom: 0;
     right: 0;
 }
-body section>section>div:first-child{
+body section>section>div:nth-child(2){
     width: 15vw;
     height: 15vw;
     background-color: white;
     border-radius: 50%;
-}
-body section>section>div:first-child:first-child{
     position: absolute;
     top: 0;
     right: 0;
     bottom: 0;
     left: 0;
     margin: auto;
+}
+body section>section>div:nth-child(2)>div{
+    width: 10vw;
+    height: 10vw;
+    background-color: #f40000;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    margin: auto;
+}
+body section>section>div:first-child{
+    width: 10vw;
+    height: 10vw;
+    background-color: white;
+}
+body section>section:first-child>div:first-child{
+    border-bottom-left-radius: 10vw;
+    position: absolute;
+    right: 0;
+}
+body section>section:nth-child(2)>div:first-child{
+    border-bottom-left-radius: 10vw;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    transform: rotate(90deg);
+}
+body section>section:nth-child(3)>div:first-child{
+    border-bottom-left-radius: 10vw;
+    position: absolute;
+    transform: rotate(270deg);
+}
+body section>section:nth-child(4)>div:first-child{
+    border-bottom-left-radius: 10vw;
+    position: absolute;
+    transform: rotate(180deg);
+    bottom: 0;
 }
