--- a/myWorks/assets/style.css
+++ b/myWorks/assets/style.css
@@ -104,12 +104,19 @@ div {
 .bShape {
     fill: #FFF;
     filter: drop-shadow(0px 4px 30px rgba(0, 0, 0, 0.41));
-    padding: 3612px 42px 2672px 927px;
+    position: absolute;
+    right: 0;
 }
 
 .bShape2 {
     fill: #FFF;
     filter: drop-shadow(0px 4px 30px rgba(0, 0, 0, 0.41));
-    text-align: center;
-    padding: 491px 3612px 478px 2672px;
+}
+.bshape3{
+    position: absolute;
+    right: 0;
+    left: 35vw;
+    margin: auto;
+    top: 97vh;
+    filter: drop-shadow(0px 4px 30px rgba(0, 0, 0, 0.41));
 }
