add responsive size !

--- a/meadia quarys/case2responsive/assets/Css/style.css
+++ b/meadia quarys/case2responsive/assets/Css/style.css
@@ -220,7 +220,7 @@ main section section:first-child>div:last-child{
 
     body main>nav{
         position: absolute;
-        background: #c940ef;
+        background: #24327f;
         top: 0;
     }
     main section {
