--- a/meadia quarys/case2responsive/assets/Css/style.css
+++ b/meadia quarys/case2responsive/assets/Css/style.css
@@ -84,7 +84,7 @@ body main>nav>ul>li::marker{
 }
 
 main section{
-    margin-left: 150px;
+    margin-left: 199px;
     position: relative;
 }
 
@@ -256,5 +256,12 @@ main section section:first-child>div:last-child{
     body main>nav>ul>li>a:hover{
         color: #0a58ca;
         font-size: small;
+    }
+}
+
+@media all and (min-width: 425px) and (max-width: 768px){
+    main section {
+        margin-left: 110px;
+        position: relative;
     }
 }
